Fix cache to update after each day's run
If a given cache key already exists, the cache action will not update the
cache, even if the cached files have changed. See
https://github.com/actions/cache/issues/342 for discussion.

The workaround is to change the cache key every day but to have a restore key
which is not date-specific. See
https://github.com/actions/cache/issues/342#issuecomment-673371329.

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,12 +20,19 @@ jobs:
             ./bin
             ./local
           key: perl
+      - name: Save date for cache
+        run: |
+          date +'%Y-%m-%d' > cache-date
+          cat cache-date
       - name: Cache data files
         uses: actions/cache@v2
         with:
           path: |
             ./data
-          key: data
+          key: data-${{ hashFiles('cache-date') }}
+          restore-keys: |
+            data-${{ hashFiles('cache-date') }}
+            data-
       - name: Install cpm
         run: |
           set -e
